# object-tracking-assignment

./: README.md  creare_track.py  create_track.py  evaluation.py  fastapi_server.py  metrics_report.md  metrics_report_soft.md  metrics_report_strong.md  pyproject.toml  track_1.py  track_2.py  trackers.py
test_tracks/: track_3.py
