[tool.poetry]
name = "object-tracking-assignment"
version = "0.1.0"
description = ""
authors = ["konstantgr <konstantin.grotov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.87.0"
matplotlib = "^3.8.2"
numpy = "^1.26.4"
scipy = "^1.12.0"
uvicorn = "^0.27.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
