[tool.poetry]
name = "object-tracking-assignment"
version = "0.1.0"
description = ""
authors = ["konstantgr <konstantin.grotov@gmail.com>"]
readme = "README.md"
packages = [
    { include = "test_tracks" },
]

[tool.poetry.dependencies]
python = "^3.10.6"
fastapi = "0.87.0"
matplotlib = "^3.8.2"
numpy = "^1.26.4"
scipy = "^1.12.0"
uvicorn = "^0.27.1"
websockets = "^12.0"
pandas = "^2.2.2"
tqdm = "^4.66.2"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]

[tool.isort]
profile = "black"
force_sort_within_sections = true
order_by_type = true
